# skillforge

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
docs/: architecture.md  evolution.md  evolver-backends.md  quickstart.md  skill-format.md
installed_skills/sf-delegate/: SKILL.md
installed_skills/sf-evolve/: SKILL.md
installed_skills/sf-orchestrate/: SKILL.md
src/skillforge/: __init__.py  cli.py  config.py  userconfig.py
src/skillforge/analyzer/: __init__.py  prompts.py
src/skillforge/bridge/: __init__.py  mcp_server.py
src/skillforge/cloud/: __init__.py  github_sync.py  manifest.py
src/skillforge/dashboard/: __init__.py  server.py
src/skillforge/evolver/: __init__.py  apply.py  parser.py  queue.py  worker.py
src/skillforge/evolver/backends/: __init__.py  base.py  claude_p.py  codex.py  detect.py  task.py
src/skillforge/hooks/: __init__.py  _protocol.py  post_tool.py  pre_prompt.py  pre_tool.py  session_start.py  stop.py
src/skillforge/recording/: __init__.py  manager.py
src/skillforge/store/: __init__.py  db.py  schema.sql
src/skillforge/visual/: __init__.py  analyzer.py
tests/unit/: test_phase2_hooks.py  test_phase3_evolver.py  test_phase4_cloud.py  test_phase5.py  test_pre_prompt.py
